import public "base.proto";
import public "zhajinhua.proto";
package bbproto;


// 存到数据库的模型

//押注的记录,针对每轮扎金花,只有一次押注记录
message TBetRecord{
	optional	uint32 	userId			= 1;		//用户的id
	repeated	int32 	betzone			= 2;		//押注的区间
	optional	string	ZjhRoundNumber	= 3;		//这一轮游戏的编号
	optional	int32 	winAmount		= 4;		//这一局赢了多少
}


//每一轮扎金花的数据
message TZjhRound{
	optional	uint32	id			=	1;	//id
	optional 	int64	beginTime	=	2;	//开始时间
	optional	int64	betEndTime	=	3;	//押注结束时间
	optional	int64	lotteryTime	=	4;	//开奖时间
	optional 	int64	endTime		=	5;	//结束时间
	repeated	int32	zoneAmount	=	6;	//押注区域的大小
	repeated	int32	zoneWinAmount	=	7;	//押注区的输赢分数
	optional	uint32	BankerUserId	=	8;	//庄家的信息
	repeated 	ZjhPai	ZjhPaiList  	=	9;	//本轮游戏的纸牌
	optional	string	Number 		=	10;	//本局游戏的编号
}

message TNotice{
	optional int32 		id 			= 1;	//公告的id
	optional int32		noticeType  = 2;	//公告的类型
	optional string 	noticeTitle = 3;	//公告的标题
	optional string		noticeContent =4;	//公告的内容
	optional string		noticeMemo	= 5;    //公告的备注
}

//后台保存数据使用的mode,一般不传递给客户端,这个实体一般是保存在redis当中
//当用程序崩溃的时候,可以用来恢复用户数据

message ThServerUser{

}

message ThServerDesk{
	//


}